# NorEngine

./: .gitignore  CMakeLists.txt  README.md
assets/: sprites.xml
assets/data/: screens.xml
src/: Action.cpp  AiManager.cpp  AssetManager.cpp  CMakeLists.txt  Camera.cpp  EnemyManager.cpp  EntityManager.cpp  Game.cpp  GameConstants.cpp  GameScreen.cpp  InputManager.cpp  MenuScreen.cpp  PlayerManager.cpp  Renderer.cpp  ScreenManager.cpp  SignalManager.cpp  SplashScreen.cpp  main.cpp
src/include/: Action.h  AiManager.h  AssetManager.h  Camera.h  Component.h  Configuration.h  Definitions.h  EnemyManager.h  Entity.h  EntityManager.h  Game.h  GameConstants.h  GameScreen.h  Glm.h  InputManager.h  Interpolation.h  MenuScreen.h  NFont.h  PlayerManager.h  Renderer.h  ResHelper.h  SDL_FontCache.h  Screen.h  ScreenManager.h  SignalManager.h  SplashScreen.h  Texture.h  Util.h
src/util/: Glm.cpp  ResHelper.cpp  Util.cpp
